--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "leaflet": "^1.5.1",
+    "leaflet-draw": "^1.0.4",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
     "vuetify": "^1.5.5"
