--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "core-js": "^2.6.5",
     "leaflet": "^1.5.1",
     "vue": "^2.6.10",
